After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711572 - kerberos: don't crash if keyring credentials disappear
kerberos: don't crash if keyring credentials disappear
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: Kerberos
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-11-06 22:03 UTC by Ray Strode [halfline]
Modified: 2013-11-07 11:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
kerberos: don't crash if keyring credentials disappear (4.05 KB, patch)
2013-11-06 22:03 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2013-11-06 22:03:54 UTC
It's possible to make gnome-online-accounts crash by:

1) creating a kerberos account in control-center
2) deleting the stored credentials from gnome keyring using seahorse
3) running kdestroy in the terminal to make the sign in button show up
in the control-center panel
4) clicking sign in

This is because the provider makes the assumption that there will always
be stored credentials when signing in interactively, which is incorrect
in the above scenario (because of step 2).

This commit hardens the get_ticket_sync function against credentials
disappearing.
Comment 1 Ray Strode [halfline] 2013-11-06 22:03:55 UTC
Created attachment 259145 [details] [review]
kerberos: don't crash if keyring credentials disappear
Comment 2 Debarshi Ray 2013-11-07 11:50:33 UTC
Review of attachment 259145 [details] [review]:

Perfect. Thanks.